# pg-mcp-server

./: .dockerignore  .gitignore  Dockerfile  README.md  databases.example.json  docker-compose.yml  pyproject.toml
server/: app.py
server/tools/: connection.py  query.py  viz.py
